--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "landingpage-react-template",
   "private": true,
   "dependencies": {
+    "@mdi/js": "^7.0.96",
+    "@mdi/react": "^1.6.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "emailjs-com": "^2.6.4",
+    "i18next": "^22.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^12.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.2",
+    "react-select": "^5.6.0",
     "smooth-scroll": "^16.1.3"
   },
   "scripts": {
